Fixed malloc (actually a "free") bug in init.c, related to colormaps. Still need to rewrite colormap code as it stinks! Fixed makefiles so they don't barf on automake 1.6 and higher.  Should solve compile problems for users on newer distributions. Tested with gentoo 1.2. Modifed the fftw lib checks and altered the header files to deal with the rfft vs drfft libraries. (compile option for fftw). Should allow eXtace to compile cleanly on systems using either rfftw or drfftw compiled versions of fftw.

--- a/INSTALL
+++ b/INSTALL
@@ -51,6 +51,11 @@ The simplest way to compile this package is:
      all sorts of other programs in order to regenerate files that came
      with the distribution.
 
+  6. With recent versions of autoconf you may get warnings about missing
+     files with a .Po extension (dependancy files), in that case just delete
+	 the config.cache file and rerun ./configure with any options you used
+	 earlier and recompile.
+
 Compilers and Options
 =====================
 
