Major rewrite of the audio_processing functions to accomodate decimation (used to get better low-freq resolution). Seems to be fully functional except the markers on the spectragrams are incorrect when using decimations.  The left-click markers on the graphic EQ are also wrong as well when using decimation. The scope can see much lower freqs easily and a side effect is it looks cooler with higher decimation values. (decimation acts in a similar manner to the sweep rate control of a conventional scope). Files modified: scope.c, audio_processing.c, options.c, globals.h, protos.h, init.c
Known bugs:
- FFT's larger than 4096 have a buffer problem, causing unwanted
harmonics in the display that are NOT in the signal.
- The decimator can segfault when using large FFT's if it runs out
of bounds. (no bounds checking in place yet..)
- The markers are all wrong when using decimation.

--- a/AUTHORS
+++ b/AUTHORS
@@ -7,17 +7,21 @@ Based on code from:
 Spectragram (originally called "tape") submitted by:
     Gregor Leusch <gleusch@Pool.Informatik.RWTH-Aachen.DE>
 
-    and hacked by Dave J. Andruczyk to be fully scalable...
+and hacked by Dave J. Andruczyk to be fully scalable...
 
 Thanks goes out to Andy Lo A Foe who created Alsaplayer for his excellent
 advice on autoconf, and helping me streamline the configure process.
 
-Thanks again to Rolf Mueller, for helping me extensively with the window
+Thanks to Rolf Mueller, for helping me extensively with the window
 functions section, and the color picker parts.
 
 Thanks to Ralph Loader <suckfish@ihug.co.nz> for the convolve pattern
-matching routines making the scope INCREDIBLY stable, evern at low freqs.
+matching routines making the scope INCREDIBLY stable, even at low freqs.
 
-Thanks to Eric Lassauge for the patches to the Colormap code, ALSA support, and 
-fixes here and there....
+Thanks to Eric Lassauge for the patches to the Colormap code 
+and fixes here and there....
+
+Thanks to Paritosh Pandy <pandya@tifr.res.in> for assisting with 
+testing the decimation code and giving me the push I needed to get 
+back into development.
 
