--- a/README
+++ b/README
@@ -18,13 +18,16 @@ Extace Waveform Viewer
    eXtace used to support ALSA 0.5x as that version had "loopback" support
    which was dropped in future releases.  Because of this change I was
    forced to remove support for ALSA.  I am looking into other Sound-Servers
-   possibly "Jack", from http://jackit.sf.net, or GStreamer.
+   possibly "Jack", from http://jackit.sf.net, or GStreamer. I might even
+   support arts if they can get it to stop hogging the CPU...
    
    
 Features:
-   eXtace has several modes, 3D Wireframe FFT, 3D solid FFT, 2D Graphic
-   Equalizer, Several scopes (dot, line, gradient), a 3D Spike FFT (high
-   resolution) and 2 2D spectrograms, (horizontal and vertical scroll). 
+   eXtace has several modes, 3D Wireframe landform FFT, 3D solid landform 
+   FFT, 2D Graphic Equalizer, Several scopes (dot, line, gradient), a 
+   3D Spike FFT (high resolution) and 2 2D spectrograms, (horizontal 
+   and vertical scroll). 
+
    All modes are fully configurable via the options panel.  Any of the 3D 
    modes can be dragged around the screen by grabbing an end with the 
    mouse (drag using the left button) and moving it anywhere within the window.
@@ -34,7 +37,6 @@ Features:
    and the trace will travel off into space in the same direction as the 
    pointer in the direction window.
 
-
    Clicking your middle mouse button on any of the displays brings up a 
    colormap editor to change the colormap eXtace uses.  (For those of you with
    two button mice, try hitting both buttons at once to mimic the middle button)
@@ -43,6 +45,7 @@ NOTE: Colormap editing does NOT work any longer. It is being redesigned as
 of 1/28/2003. Expect future revisions to have it working again.  NOTE you
 can always create your own maps as they are all text file "instructions"
 for eXtace to build the maps from.
+
    Clicking within the gradient on the left and then selecting a color on the
    right and clicking "OK" will update the window and the running display.
    Colormaps can be saved and loaded using the Load/Save buttons. An arbritrary
@@ -53,10 +56,9 @@ for eXtace to build the maps from.
 
 Compilation instructions:
    You will need Esound and its devel libs installed and working and the FFTW 
-   (Fastest FFT in the West) library to build and run eXtace.
+   (Fastest FFT in the West) (version 2.x only) library to build and run eXtace.
    The FFTW lib can be found on http://www.fftw.org/. Source and Binary RPMS
    are mirrored on http://extace.souceforge.net/
-
 
    Run "./configure" (no quotes). Then "make" and then "make install" as root.
    Every effort has been taken to try and address the various installation
@@ -65,10 +67,9 @@ Compilation instructions:
    me your config.log, the screen output from running ./configure and any 
    options you fed to configure to get it to fail.
 
-
    The EsounD daemon 'esd' will need to be running as well. Typically
    the daemon autostarts when an app uses the esd routines. (xmms spawns
-   it whenyou select the Esound Output plugin)
+   it when you select the Esound Output plugin)
 
    Currently there are no command line parameters.  An options panel
    is available to tune the speed, and 3D effects.
@@ -81,19 +82,16 @@ Performance:
    4.0.3 and NVIDIAs' binary drivers.  Your system performance may vary...
    I typically see processor usage of around 2-15% for eXtace plus 5-20% for
    X (the X server).  If you run into very high processor usage (over 70%) 
-   you can try turning on or off the backing pixmap option with the options 
-   panel.  On Xfree 3.3.x Backing pixmap turned off gives me lower processor
-   usage.  Though on Xfree 4.0.x I get MUCH lower processor use with backing
-   pixmap turned on.  On my low end dev box (Dell Inspiron 7000 with a
-   mobile PII 366 and ATI Mach64 video running Gentoo 1.2 and XFree 4.2.1)
-   I can run two eXtace processes and xmms and barely get over 27% cpu usage
-   total (X, xmms, 2*eXtace)
+   sometimes it means an OpenGL app has run but the buffers haven't been freed
+   causing the X server a lot of overhead. I've found the resizing the window
+   forces X to flush some arbritrary buffers and performacne improves, and cpu
+   usage goes way down.  (This was demonstrated on earlier versions of the 
+   binary NVIDIA X11 driver,  it may have been a bug in the driver... )
    
    Your mileage may vary.  NOTE: The more video RAM your 
    card has, the better. (more ram = more space for pixmap caches and other
    off-screen stuff.)  With less memory backing pixmaps become slower as system
-   memory has to be used and overhead increases.  Having backing pixmap cache
-   turned off will result in flicker though (which may get annoying).
+   memory has to be used and overhead increases. 
 
 Testing:   
    The sine.c is an example program to test extace with, just run
@@ -114,7 +112,7 @@ Misc:
     
    Enjoy!
 
-Dave Andruczyk. <djandruczyk@yahoo.com>
+Dave Andruczyk. <djandruczyk at yahoo dot com>
 
 Based on the orignal extace code written by:
 The Rasterman           <raster@redhat.com> 
