--- a/src/AUTHORS
+++ b/src/AUTHORS
@@ -7,17 +7,21 @@ Based on code from:
 Spectragram (originally called "tape") submitted by:
     Gregor Leusch <gleusch@Pool.Informatik.RWTH-Aachen.DE>
 
-    and hacked by Dave J. Andruczyk to be fully scalable...
+and hacked by Dave J. Andruczyk to be fully scalable...
 
 Thanks goes out to Andy Lo A Foe who created Alsaplayer for his excellent
 advice on autoconf, and helping me streamline the configure process.
 
-Thanks again to Rolf Mueller, for helping me extensively with the window
+Thanks to Rolf Mueller, for helping me extensively with the window
 functions section, and the color picker parts.
 
 Thanks to Ralph Loader <suckfish@ihug.co.nz> for the convolve pattern
-matching routines making the scope INCREDIBLY stable, evern at low freqs.
+matching routines making the scope INCREDIBLY stable, even at low freqs.
 
-Thanks to Eric Lassauge for the patches to the Colormap code, ALSA support, and 
-fixes here and there....
+Thanks to Eric Lassauge for the patches to the Colormap code 
+and fixes here and there....
+
+Thanks to Paritosh Pandy <pandya@tifr.res.in> for assisting with 
+testing the decimation code and giving me the push I needed to get 
+back into development.
 
