--- a/TODO
+++ b/TODO
@@ -1,4 +1,10 @@
 
+ - Zoom-in ability on all modes so one can look at a specific region
+ of interest. (below 4khz, or 8-12 khz for example)
+	update as of 8/19/2003 this code is internally function but gui hooks
+	have not as of yet been put in place.
+
+ - Scales so eXtace can be used for more than just eye-candy. 
 
  - Fade off in the distance.  Potentially impossible to do, except on extremely
 fast machines, OpenGL may be required... Anyone know how to use Alpha channels
