--- a/src/AUTHORS
+++ b/src/AUTHORS
@@ -25,3 +25,9 @@ Thanks to Paritosh Pandy <pandya@tifr.res.in> for assisting with
 testing the decimation code and giving me the push I needed to get 
 back into development.
 
+Thanks to Will Riley, A pro in the audio field who offered suggestions
+which lead to the arbritrary zooming functions (w.i.p.). His support and 
+enthusiasm for eXtace as well as the support from other users is what 
+makes this development effort worthwhile.
+
+
