--- a/README
+++ b/README
@@ -2,8 +2,8 @@ Extace Waveform Viewer
 ----------------------
 
    This is the eXtace Audio signal visualizer.  It plugs itself in as 
-   an EsounD monitor and displays the output from Audio passing through 
-   EsounD.
+   an PulseAudio monitor and displays the output from Audio passing through 
+   a PulseAudio device.
    
    eXtace will NOT display the output of a CD playing in your CD/CDRW/DVD
    drive, as the drive does all the decoding and just passes analog audio
@@ -11,15 +11,10 @@ Extace Waveform Viewer
    Modulation) audio data to give you a display.  There are many apps that 
    can extract the audio data from a CD to be played back in this manner. 
    cdda2wav and paranoia are two main applications that can "rip" audio
-   data off of a CD to be piped through Esound so eXtace can "see"
+   data off of a CD to be piped through pulseaudio so eXtace can "see"
    it.
    
-   EsounD is Gnome's sound daemon.  
-   eXtace used to support ALSA 0.5x as that version had "loopback" support
-   which was dropped in future releases.  Because of this change I was
-   forced to remove support for ALSA.  I am looking into other Sound-Servers
-   possibly "Jack", from http://jackit.sf.net, or GStreamer. I might even
-   support arts if they can get it to stop hogging the CPU...
+   PulseAudio is one of linux's most common sound daemons.
    
    
 Features:
@@ -55,8 +50,8 @@ for eXtace to build the maps from.
    is extremely simple (and somewhat inflexible), see the source for details.
 
 Compilation instructions:
-   You will need Esound and its devel libs installed and working and the FFTW 
-   (Fastest FFT in the West) (version 2.x only) library to build and run eXtace.
+   You will need GTK+ devel libs installed and working and the FFTW 
+   (Fastest FFT in the West) (version 3.x only) library to build and run eXtace.
    The FFTW lib can be found on http://www.fftw.org/. Source and Binary RPMS
    are mirrored on http://extace.souceforge.net/
 
@@ -93,15 +88,6 @@ Performance:
    off-screen stuff.)  With less memory backing pixmaps become slower as system
    memory has to be used and overhead increases. 
 
-Testing:   
-   The sine.c is an example program to test extace with, just run
-
-	./sine | esdcat				<--- ESOUND
-
-   Turn down your volume though as it may be loud.. :)
-   This feeds a sine wave stepped sweep into Esound which you should hear, 
-   and see in eXtace.
-
 Misc:
    The scope has an option in the panel to enable/disable the Trace Stabilizer.
    The stabilizer uses a mathematical routine (called a convolution) that 
@@ -112,7 +98,7 @@ Misc:
     
    Enjoy!
 
-Dave Andruczyk. <djandruczyk at yahoo dot com>
+Dave Andruczyk. <dandruczyk at gee mail dot com>
 
 Based on the orignal extace code written by:
 The Rasterman           <raster@redhat.com> 
